# Vector-based-Library-Search

./: .gitignore  README.md  app.py  bm25_search.py  config.py  data_ingestion.py  hybrid_search.py  main.py  requirements.txt  vector_search.py
arbortextgen/: FAISS.py  manage.py  pyproject.toml
arbortextgen/LLM/: apps.py  urls.py  views.py
arbortextgen/account/: apps.py  models.py  serializers.py  urls.py  views.py
arbortextgen/account/migrations/: 0001_initial.py
arbortextgen/arbortextgen/: asgi.py  settings.py  urls.py  wsgi.py
client/: index.html  package-lock.json
client/src/: App.jsx  index.css
client/src/components/: AuthContext.jsx  Home.jsx  Login.jsx  Navbar.jsx  Register.jsx  SearchResult.jsx  Starchat.jsx
server/: RAG_QA_Examples.txt  RAG_example_with_tinyLlama.py  app.py  bm25_search.py  config.py  data_ingestion.py  hybrid_search.py  main.py  vector_search.py
